ci/cluster/services/manifests/slack-vuesualizer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: slack-vuesualizer
  name: slack-vuesualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-vuesualizer
  template:
    metadata:
      labels:
        app: slack-vuesualizer
    spec:
      containers:
        - name: slack-vuesualizer
          image: chris5896/slack-vuesualizer:1.1.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
