ci/cluster/services/manifests/slack-vuesualizer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-vuesualizer
  labels:
    app: slack-vuesualizer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: slack-vuesualizer
