ci/cluster/services/manifests/slack-vuesualizer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-prod"
  name: slack-vuesualizer
spec:
  ingressClassName: nginx
  rules:
    - host: slack-archive.cncf.io
      http:
        paths:
          - backend:
              service:
                name: slack-vuesualizer
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - slack-archive.cncf.io
      secretName: slack-vuesualizer-ssl
